code modification , function detects if layer is already coloured , access coordiantes to uncolour it

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,15 +20,15 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
     //design
-    implementation 'com.google.android.material:material:1.1.0-alpha02'
+    implementation 'com.google.android.material:material:1.1.0-alpha04'
     // such as navigation drawers, floating action buttons (FAB), snackbars, and tabs.
-    implementation 'com.google.android.material:material:1.1.0-alpha02'
+    implementation 'com.google.android.material:material:1.1.0-alpha04'
     //library for circular image
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     //library for croping image
-    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
     //library to retrieve image
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
@@ -39,7 +39,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:11.6.0'
 //    library to read/write data on firebase database
     implementation 'com.google.firebase:firebase-database:11.6.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0-alpha1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
